mungegithub/submit-queue/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: submit-queue
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: submit-queue
    spec:
      containers:
      - name: submit-queue
        command:
        - /mungegithub
        - --token-file=/etc/secret-volume/token
        - --pr-mungers=blunderbuss,lgtm-after-commit,cherrypick-auto-approve,label-unapproved-picks,needs-rebase,ok-to-test,rebuild-request,path-label,size,stale-pending-ci,stale-green-ci,block-path,release-note-label,comment-deleter,submit-queue,issue-cacher,flake-manager,old-test-getter,assign-fixes
        - --dry-run=true
        - --weak-stable-jobs=kubernetes-kubemark-500-gce
        - --required-contexts="Jenkins GCE Node e2e"
        - --number-of-old-test-results=5
        - --http-cache-dir=/cache/httpcache
        - --test-owners-csv=/gitrepos/kubernetes/test/test_owners.csv
        image: gcr.io/google_containers/submit-queue:2016-05-24-86f86cd
        ports:
        - name: status
          containerPort: 8080
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 100m
        volumeMounts:
        - mountPath: /etc/secret-volume
          name: secret-volume
        - mountPath: /gitrepos
          name: kubernetes-repo
        - mountPath: /cache
          name: cache-volume
      volumes:
      - name: secret-volume
        secret:
          secretName: github-token
      - name: kubernetes-repo
        gitRepo:
          repository: "https://github.com/kubernetes/kubernetes.git"
          revision: "master"
      - name: cache-volume
        persistentVolumeClaim:
          claimName: submit-queue-cache
